Working or service discovery

--- a/base-server/build.gradle
+++ b/base-server/build.gradle
@@ -1,6 +1,8 @@
 description = "Provides base classes for creating REST servers"
 
 dependencies {
+    compile project(':service-discovery')
+    compile project(':hazelcast-discovery')
     compile 'com.google.guava:guava:18.0'
     compile 'io.ratpack:ratpack-guice:0.9.14'
     compile 'io.ratpack:ratpack-core:0.9.14'
