Added full integration test (failing)

--- a/service-api/build.gradle
+++ b/service-api/build.gradle
@@ -2,4 +2,6 @@ description = "Services and DSL definitions"
 
 dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
+
 }
