Updated main readme

--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -1,3 +1,7 @@
+description = 'User service'
+
+mainClassName = 'microservices.sample.user.ratpack.UserServer'
+
 dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
 
